# beta-flute

./: ARCHITECTURE.md  BUILD.sh  BUILD_WINDOWS.bat  CMakeLists.txt  DELIVERY.md  QUICKSTART.md  README.md  REINIT_ON_NOTE.md  START_HERE.md  WINDOWS_BUILD.md  WINDOWS_SETUP.md  WINDOWS_SUPPORT.md  qg_wavetable_server.py
juce/: Main.cpp  QGWavetable.h  QGWavetableComponents.h  QGWavetableEditor.h  QGWavetableProcessor.cpp  QGWavetableProcessor.h
